fix layout because of content overflow, add 2 webp images

--- a/source/sass/blocks/advantage-card.scss
+++ b/source/sass/blocks/advantage-card.scss
@@ -12,9 +12,8 @@
   padding: 39px 16px 35px;
 
   @include medium-size {
-    padding: 42px 32px;
+    padding: 40px 32px;
     width: 256px;
-    min-height: 256px;
   }
 
   @include large-size {
@@ -56,10 +55,10 @@
 }
 
 .advantage-card--decorate {
-  padding-top: 54px;
-  font-weight: bold;
-
   @include small-size {
+    font-weight: bold;
+    padding-top: 54px;
+
     &::before {
       content: "";
       position: absolute;
