--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,12 +1,7 @@
 .page-header {
   position: relative;
-  height: 56px;
+  min-height: 56px;
   background-color: $background-secondary;
-
-  @include medium-size {
-    padding-left: 50px;
-    padding-right: 50px;
-  }
 }
 
 .page-header__logo {
